Refactor job service methods to return CommonResponse and improve error handling